@@ -1,5 +1,12 @@
 2009-03-04  Jan Arne Petersen  <jpetersen@openismus.com>
 
+	* src/hd-activate-views-dialog.c (hd_activate_views_dialog_init):
+	* src/hd-background-helper.c (save_thumbnail_async_thread):
+	* src/hd-backgrounds.c (save_thumbnail_cb, read_pixbuf_cb): Create
+	  additional thumbnails for the activate views dialog.
+
+2009-03-04  Jan Arne Petersen  <jpetersen@openismus.com>
+
 	* src/hd-incoming-events.c (group_window_response): Fix un-grouped
 	  notification case.
 
